--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,10 +43,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     // need this to use the Dispatcher.Main
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     // okhttp + gson
-    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation 'com.google.code.gson:gson:2.9.0'
 
     // retrofit
@@ -60,4 +60,5 @@ dependencies {
 
     // need this to be able to test JSONObject in junit
     testImplementation 'org.json:json:20220320'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
 }
