--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,12 +56,16 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
 
     // need this to be able to test JSONObject in junit
     testImplementation 'org.json:json:20220320'
 
     // need this to mock server responses
     testImplementation "com.squareup.okhttp3:mockwebserver:4.10.0"
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.10.0"
 
 }
